2013-11-05  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_decl.c (dt_decl_func): Allocate declarator after
	prototype checks.
	* cmd/dtrace.c (main): Free the argv on error.

2013-11-05  Kris Van Hees <kris.van.hees@oracle.com>

	* test/unittest/builtinvar/tst.errno2.d: Test errno value in syscall.
	* libdtrace/io.d.in: Fix dev_statname and dev_pathname.

2013-11-04  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Pcontrol.c (Pcreate): Fix use-after-free.
	* libproc/isadep_x86.c (Pread_first_arg_x86): Check the right
	variable for failure.
	* libdtrace/dt_symtab.c (dt_symbol_by_addr): Fix scanning loop.
	* libdtrace/dt_pic.d (dt_pid_create_pid_probes): Initialize
	dpp_nmatches.

2013-11-01  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Support valgrind, running DTrace via a wrapper
	script.  Pointer-elision skips valgrind errors.  Boost the timeout
	by a factor of ten when valgrinding.

	* libdtrace/dt_impl.h (dtrace_hdl_t.dt_procfs_path): Remove, unused.
	* libdtrace/dt_open.c (dt_vopen): Just call Pset_procfs_path() directly.
	* libdtrace/dt_options.c (dt_opt_procfs_path): Likewise.

	* libdtrace/dt_open.c (dtrace_close): Free the dt_module_path.
	* libdtrace/dt_module.c (d_tkern_path_update): Close the fts handle.
	* libdtrace/dt_impl.h (dtrace_hdt_t.dt_ctf_elf_ref): New refcount.
	* libdtrace/dt_module.c (dt_module_init_elf): Bump it approriately.
	(dt_module_unload): Unbump it when a built-in module is closed.
	(dt_module_load): Assign the uncompressed data to the right variable.

	libdtrace-ctf: Updated.

2013-10-31  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dtrace.h (dtrace_stmtdesc_t): Add padding to work
	around a GCC bug.
	* INCOMPATIBILITIES: Document it.

2013-10-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_lex.c (YY_INPUT): Split out into...
	(dt_input): ... this new function.  No longer check for parser
	errors.  Use memcpy() for string input.
	(EOF rules): Introduce, for states S1 and S3.